# smartHive-vision

./: .gitignore  README.md
src/: RaspiCam.md  camera.md  main.ipynb  process_data.py  pyproject.toml  raspi-camera.py  raspi_cam.py  raspi_camera.py  requirements.txt  run_model.py  running.ipynb  running.md  test.py  training.ipynb  training.md
